fix tooltip right overflow

--- a/docs/style.css
+++ b/docs/style.css
@@ -25,13 +25,27 @@ body {
 
 .linechart.tip {
   position: absolute;
-  width: 200px;
+  width: 250px;
   height: 100px;
-  background: rgb(34, 39, 42);
-  color: white;
-  padding: 10px;
-  border-radius: 2px;
+  background: #fff;
+  padding: 5px 10px;
+  border: 1px solid #bbb;
+  border-radius: 4px;
   z-index: 100;
   pointer-events: none;
-  font-size: .8em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.linechart.tip .title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-bottom: auto;
+}
+
+.linechart.tip .team {
+  display: flex;
+  justify-content: space-between;
 }
